--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,27 @@
-pandas
-numpy
-scikit-learn
-imbalanced-learn
-matplotlib
-seaborn
-joblib
-xgboost
-lightgbm
-jupyter
-fastapi
-uvicorn
-streamlit>=1.28.0
-plotly>=5.17.0
+# Core ML libraries
+scikit-learn>=1.2.0
+pandas>=2.0.0
+numpy>=1.24.0
+joblib>=1.2.0
+
+# Advanced ML (optional but recommended)
+xgboost>=1.7.5
+lightgbm>=3.3.0
+imbalanced-learn>=0.10.0
+
+# Visualization
+matplotlib>=3.6.0
+seaborn>=0.12.0
+plotly>=5.15.0
+
+# Dashboard
+streamlit>=1.25.0
+
+# Utilities
+pathlib2
+python-dateutil>=2.8.0
+
+# Development (optional)
+jupyter>=1.0.0
+notebook>=6.5.0
+pytest>=7.0.0
