--- a/requirements.txt
+++ b/requirements.txt
@@ -3,25 +3,33 @@ scikit-learn>=1.2.0
 pandas>=2.0.0
 numpy>=1.24.0
 joblib>=1.2.0
+scipy>=1.10.0
+
+# Imbalanced learning
+imbalanced-learn>=0.10.0
 
 # Advanced ML (optional but recommended)
 xgboost>=1.7.5
 lightgbm>=3.3.0
-imbalanced-learn>=0.10.0
 
 # Visualization
 matplotlib>=3.6.0
 seaborn>=0.12.0
 plotly>=5.15.0
 
-# Dashboard
-streamlit>=1.25.0
+# API Framework
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+pydantic>=2.0.0
+
+# Interpretability
+shap>=0.42.0
 
 # Utilities
-pathlib2
 python-dateutil>=2.8.0
+pathlib2
 
-# Development (optional)
+# Development
 jupyter>=1.0.0
 notebook>=6.5.0
-pytest>=7.0.0
+pytest>=7.4.0
