feat: Add fairness-aware training experiments and decision threshold optimization scripts
- Introduced  to evaluate fairness-aware training strategies using ExponentiatedGradient and AIF360 Reweighing.
- Added  for optimizing decision thresholds based on calibrated validation probabilities while respecting precision and recall constraints.
- Created  to operate on calibrated validation probabilities and select optimal thresholds.
- Implemented  for sweeping thresholds during validation and reporting metrics on the test set.
- Updated  to consolidate age bins for improved fairness stability.
- Modified  to reduce age groups and standardize categories for fairness.
- Enhanced  to augment training groups based on critical attributes and adjusted precision/recall thresholds.
- Improved  to handle rare categories in one-hot encoding more effectively.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,15 @@
 models/
 __pycache__/
 .ipynb_checkpoints
-data/
 PROJECT_NARRATIVE.md
 README_DASHBOARD.md
+tmp_cell4.py
+tmp_debug.py
+tmp_inspect.py
+tmp_v2_cell4.py
+temp_analysis.py
+build_analysis.py
+tmp_replace.py
+nb2_cells.txt
+*.png
+display_results.py
