feat: Add fairness audit system with validation and mitigation utilities
- Implemented  to check for Fairlearn installation, validate the fairness_audit module, create a dummy threshold.json, and run smoke tests.
- Developed  containing functions for auditing fairness, including baseline metrics calculation, staged mitigation strategies, and generating reports with bootstrap confidence intervals.
- Enhanced  to plot confusion matrices for top models, incorporating calibrated confusion matrices from test results and providing a summary of metrics.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 models/
 __pycache__/
 .ipynb_checkpoints
+
 PROJECT_NARRATIVE.md
 README_DASHBOARD.md
 tmp_cell4.py
@@ -17,3 +18,5 @@ tmp_replace.py
 nb2_cells.txt
 *.png
 display_results.py
+*.joblib
+*.json
