--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ scipy>=1.10.0
 # Imbalanced learning
 imbalanced-learn>=0.10.0
 
+# Fairness
+fairlearn>=0.9.0
+
 # Advanced ML (optional but recommended)
 xgboost>=1.7.5
 lightgbm>=3.3.0
@@ -33,3 +36,5 @@ pathlib2
 jupyter>=1.0.0
 notebook>=6.5.0
 pytest>=7.4.0
+
+streamlit>=1.24.0
